# jispr_flow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TODO.md  architecture20.md  local-flow.example.toml  pyproject.toml
.codex/environments/: environment.toml
benchmarks/: README.md  corpus.example.jsonl
docs/: BETA_DISTRIBUTION.md  architecture.md
docs/asr/: MLX_EVALUATION.md
docs/blog/: building-jispr-a-private-dictation-app.md
local_flow/: __init__.py  __main__.py  app.py  app_host.py  atomicio.py  benchmark_models.py  config.py  config_migration.py  demo.py  errors.py  pipeline.py  runtime_lock.py  setup_wizard.py  status.py
local_flow/asr/: __init__.py  base.py  benchmark.py  faster_whisper_asr.py  mlx_parakeet_asr.py  mlx_whisper_asr.py  mock.py  streaming.py  vocabulary.py
script/: bootstrap.sh  build_and_run.sh  package_beta.sh  stage_engine.sh
tests/: conftest.py  test_app_host.py  test_asr_benchmark.py  test_asr_config.py  test_capture.py  test_cleanup_levels.py  test_command_mode.py  test_config.py  test_config_migration.py  test_context.py  test_demo_and_cli.py  test_field_context.py  test_gain.py  test_history.py  test_hotkeys.py  test_insertion.py  test_insights.py  test_learning.py  test_lmstudio_client.py  test_mlx_parakeet_asr.py  test_mlx_whisper_asr.py  test_model_benchmark.py  test_mouse_hotkey.py  test_packaging_entitlements.py  test_personalization.py  test_pill.py  test_pipeline_integration.py  test_polish_rules.py  test_polisher.py  test_prompting.py  test_ptt_liveness.py  test_recovery.py  test_runtime_lock.py  test_scratchpad.py  test_scratchpad_hotkey.py  test_settings_controller.py  test_settings_service.py  test_setup_wizard.py  test_status.py  test_streaming.py  (+6 more)
(+91 files in other folders)
