[project]
name = "local-flow"
version = "0.1.0"
description = "Local-first, open-source desktop dictation: local ASR + VAD, LM Studio polish, clipboard/paste insertion."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# Live microphone capture + WebRTC VAD.
audio = [
    "sounddevice>=0.4.7",
    "webrtcvad-wheels>=2.0.14",
]
# Local speech-to-text.
asr = [
    "faster-whisper>=1.0.0",
]
# Apple-Silicon-native local speech-to-text (opt-in; faster-whisper remains default).
mlx-asr = [
    "mlx-whisper>=0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
# Global hotkeys, keystroke paste/typing, clipboard.
desktop = [
    "pynput>=1.8.0",
    "pyperclip>=1.9.0",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=9.0; sys_platform == 'darwin'",
]
# Menu-bar tray icon (pystray) + generated icon images (Pillow).
tray = [
    "pystray>=0.19",
    "pillow>=10.0",
]
all = [
    "local-flow[audio,asr,desktop,mlx-asr,tray]",
]

[project.scripts]
local-flow = "local_flow.app:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["local_flow"]
